# rotation-optimization

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp
src/: angleAxisReprojectionError.cpp  angleAxisReprojectionError.hpp  geometry.cpp  geometry.hpp  main.cpp  matrixReprojectionError.cpp  matrixReprojectionError.hpp  optimization.cpp  optimization.h  quaternionReprojectionError.cpp  quaternionReprojectionError.hpp  reprojectionError.hpp  setupScene.cpp  setupScene.h  types.h
